<resources>
    <string name="app_name">finalPriject</string>
    <string name="hello">hi，你好</string>
    <string name="todo">TODO</string>
    <string name="phone">手机号</string>
    <string name="welcome">hi，欢迎加入</string>
    <string name="tishi1">请输入手机号</string>
    <string name="tishi2">请输入你的用户名</string>
    <string name="tishi3">请输入您的密码</string>
    <string name="tishi4">请再次输入你的密码</string>
    <string name="tishi5">注册</string>
    <string name="pn">账号</string>
    <string name="pasw">密码</string>
    <string name="anyway">hi~最近好吗</string>
    <string name="tishi6">登录</string>
    <string name="author">作者</string>
    <string name="azhe">佚名</string>
    <string name="time1">时间</string>
    <string name="one">增加书单</string>
    <string name="two">身高体重</string>
    <string name="three">视力情况</string>
    <string name="dsp">学而不思则罔，思而不学则殆</string>
    <string name="re2">修改</string>
    <string name="online">看看豆瓣书评</string>
    <string name="bookn">请输入书名</string>
    <string name="weight">请输入体重</string>
    <string name="time">XX年-XX月-XX日</string>
    <string name="high">这里是之前读入的数据</string>
    <string name="sug">一些小建议</string>
    <string name="bt">提交</string>
    <string name="zhuangtai">状态</string>
    <string name="zhaohu">HELLO,十七</string>
    <string name="si">手机号</string>
    <string name="si4">确认密码</string>
    <string name="si3">密码</string>
    <string name="si2">用户名</string>
    <string name="add">新增书籍</string>
    <string name="add2">放入新书</string>
    <string name="list">数据统计</string>
    <string name="sa1">已读</string>
    <string name="sa2">在读</string>
    <string name="sa3">想读</string>
    <string name="hello1">一起看看你的阅读情况吧~</string>
    <string name="zvx">添加</string>
    <string name="niwdq">0</string>
    <string name="huhu">这里是看书的人</string>
    <string name="ababa">书名</string>
    <string name="abababba">书的评价</string>
    <string name="abab">看看我的</string>
    <string name="babba">看看大家</string>
    <string name="njk">这里展示一个月的积分</string>
    <string name="nunu">退出登陆</string>
    <string name="mxks">这是书名</string>
    <string name="xsfcd">这是作者</string>
</resources>