<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity8">>

    <TextView
        android:textColor="#FFFFFF"

        android:id="@+id/itemA"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/ababa" />
    <TextView
        android:id="@+id/itemP"
        android:textColor="#FFFFFF"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/huhu" />



    <TextView
        android:id="@+id/itemR"

        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:text="@string/abababba"
        android:textColor="#FFFFFF" />
</LinearLayout>
