<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity4">

    <TextView
        android:textColor="#FFFFFF"
        android:id="@+id/itemTitle"
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:text="@string/azhe"
        android:gravity="center_vertical"

        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTime" />

    <TextView
        android:id="@+id/itemAuthor"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:gravity="end"
        android:text="@string/author"
        android:textColor="#FFFFFF"
        android:paddingRight="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/itemTime"
        android:layout_width="311dp"
        android:layout_height="34dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/time1"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/itemStates"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemStates"
        android:layout_width="74dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="15dp"

        android:background="@drawable/tag"
        android:gravity="center"
        android:text="@string/zhuangtai"
        android:textColor="#3C3B3B"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/itemTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>