<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nnnnnnnn"
    tools:context=".MainActivity7">
<!---
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line"
        android:layout_width="416dp"
        android:layout_height="287dp"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="MissingConstraints"></com.github.mikephil.charting.charts.LineChart>
        -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="98dp"

        android:textSize="15sp"
        android:textColor="#FFFFFF"
       android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:text="@string/hello1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="177dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="316dp"
        android:gravity="center"
        android:text="@string/sa1"
        android:textColor="#FFFFFF"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:layout_marginTop="316dp"
        android:gravity="center"
        android:text="@string/niwdq"

        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="177dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="28dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/sa2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"

        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/niwdq"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="177dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/sa3"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:textColor="#FFFFFF"
        android:gravity="center"

        android:text="@string/niwdq"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="303dp"
        android:layout_height="127dp"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:text="@string/njk"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.582" />

</androidx.constraintlayout.widget.ConstraintLayout>