<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mmmmmmm"
    tools:context=".MainActivity6">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/bookn"

        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="262dp"
        android:layout_height="60dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/author"
        android:inputType="text"

        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="410dp"
        android:layout_height="427dp"
        android:backgroundTint="#FFFFFF"

        android:gravity="top"
        android:hint="@string/dsp"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="104dp"
        android:layout_height="52dp"
        android:layout_marginStart="68dp"
        android:background="@drawable/vc"
        android:onClick="pushdata"

        android:text="@string/zvx"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button5"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:background="@drawable/vc"
        android:onClick="open"
        android:text="@string/online"
        android:textColor="#FFFFFF"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="67dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:srcCompat="@drawable/lll" />

    <LinearLayout

        android:textColor="#FFFFFF"
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2">

        <RadioGroup
            android:id="@+id/radioGroupId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">


            <RadioButton
                android:id="@+id/wantButtonId"
                android:layout_width="136dp"
                android:layout_height="match_parent"

                android:textColor="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:paddingLeft="10dp"
                android:text="想读" />

            <RadioButton
                android:id="@+id/doButtonId"

                android:textColor="#FFFFFF"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:text="在读"

                />

            <RadioButton
                android:id="@+id/didButtonId"
                android:layout_width="146dp"

                android:textColor="#FFFFFF"
                android:layout_height="71dp"
                android:backgroundTint="#FFFFFF"
                android:text="已读" />
        </RadioGroup>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>